# Python-for-Data-Science

./: .gitignore  README.md
Python0/ex00/: Hello.py
Python0/ex01/: format_ft_time.py
Python0/ex02/: find_ft_type.py
Python0/ex03/: NULL_not_found.py
Python0/ex04/: whatis.py
Python0/ex05/: building.py
Python0/ex06/: filterstring.py  ft_filter.py
Python0/ex07/: sos.py
Python0/ex08/: Loadin.py
Python0/ex09/: LICENSE  README.md  pyproject.toml
Python0/ex09/src/ft_package/: count_in_list.py  utils.py
Python1/ex00/: give_bmi.py
Python1/ex01/: array2D.py
test/: Python0_ex02_test.py  Python0_ex03_test.py  Python0_ex06_test.py  Python0_ex08_test.py  Python0_ex09_test.py  Python1_ex00_test.py  Python1_ex01_test.py  test.py
