[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="aez-zaou", email="aez-zaou@student.1337.ma" },
]
description = "A small ft_package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aladinez/Python-for-Data-Science"
Issues = "https://github.com/aladinez/Python-for-Data-Science"